--- a/cli-desktop/pyUI/pyWindow/ui/LoginUI.ui
+++ b/cli-desktop/pyUI/pyWindow/ui/LoginUI.ui
@@ -209,12 +209,13 @@
     <rect>
      <x>410</x>
      <y>400</y>
-     <width>61</width>
+     <width>81</width>
      <height>31</height>
     </rect>
    </property>
    <property name="font">
     <font>
+     <family>Segoe UI</family>
      <pointsize>12</pointsize>
      <weight>75</weight>
      <bold>true</bold>
