--- a/cli-desktop/pyUI/pyWindow/ui/RegisterUI.ui
+++ b/cli-desktop/pyUI/pyWindow/ui/RegisterUI.ui
@@ -24,7 +24,7 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>12</pointsize>
+     <pointsize>11</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -44,13 +44,14 @@
     <rect>
      <x>360</x>
      <y>465</y>
-     <width>91</width>
+     <width>111</width>
      <height>31</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>14</pointsize>
+     <family>Segoe UI</family>
+     <pointsize>13</pointsize>
      <underline>true</underline>
      <stylestrategy>PreferAntialias</stylestrategy>
     </font>
@@ -73,7 +74,7 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>12</pointsize>
+     <pointsize>11</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -117,7 +118,7 @@
    </property>
    <property name="font">
     <font>
-     <pointsize>12</pointsize>
+     <pointsize>11</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -137,13 +138,13 @@
     <rect>
      <x>430</x>
      <y>305</y>
-     <width>111</width>
-     <height>71</height>
+     <width>121</width>
+     <height>91</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>12</pointsize>
+     <pointsize>11</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
@@ -190,7 +191,7 @@
       <rect>
        <x>0</x>
        <y>5</y>
-       <width>70</width>
+       <width>81</width>
        <height>40</height>
       </rect>
      </property>
@@ -208,7 +209,7 @@
      </property>
      <property name="font">
       <font>
-       <pointsize>13</pointsize>
+       <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -222,7 +223,7 @@
       <rect>
        <x>0</x>
        <y>155</y>
-       <width>70</width>
+       <width>81</width>
        <height>40</height>
       </rect>
      </property>
@@ -241,9 +242,9 @@
     <widget class="QLineEdit" name="UserNameLineEdit">
      <property name="geometry">
       <rect>
-       <x>70</x>
+       <x>85</x>
        <y>5</y>
-       <width>305</width>
+       <width>290</width>
        <height>40</height>
       </rect>
      </property>
@@ -269,29 +270,39 @@
     <widget class="QLabel" name="EmaiLlabel">
      <property name="geometry">
       <rect>
-       <x>0</x>
+       <x>-1</x>
        <y>55</y>
-       <width>70</width>
+       <width>81</width>
        <height>40</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <pointsize>13</pointsize>
+       <pointsize>12</pointsize>
        <weight>75</weight>
        <bold>true</bold>
+       <stylestrategy>PreferAntialias</stylestrategy>
       </font>
      </property>
+     <property name="contextMenuPolicy">
+      <enum>Qt::DefaultContextMenu</enum>
+     </property>
+     <property name="layoutDirection">
+      <enum>Qt::LeftToRight</enum>
+     </property>
      <property name="text">
-      <string> 邮    箱 ：</string>
+      <string>邮   箱：</string>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
      </property>
     </widget>
     <widget class="QLineEdit" name="EmailLineEdit">
      <property name="geometry">
       <rect>
-       <x>70</x>
+       <x>85</x>
        <y>55</y>
-       <width>305</width>
+       <width>290</width>
        <height>40</height>
       </rect>
      </property>
@@ -319,7 +330,7 @@
       <rect>
        <x>0</x>
        <y>105</y>
-       <width>70</width>
+       <width>81</width>
        <height>40</height>
       </rect>
      </property>
@@ -332,15 +343,15 @@
       </font>
      </property>
      <property name="text">
-      <string>密   码 ：</string>
+      <string>密  码：</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="passwdLineEdit">
      <property name="geometry">
       <rect>
-       <x>70</x>
+       <x>85</x>
        <y>105</y>
-       <width>305</width>
+       <width>290</width>
        <height>40</height>
       </rect>
      </property>
@@ -366,9 +377,9 @@
     <widget class="QLineEdit" name="passwd2LineEdit">
      <property name="geometry">
       <rect>
-       <x>70</x>
+       <x>85</x>
        <y>155</y>
-       <width>305</width>
+       <width>290</width>
        <height>40</height>
       </rect>
      </property>
