--- a/cli-desktop/pyUI/pyWindow/ui/RegisterUI.ui
+++ b/cli-desktop/pyUI/pyWindow/ui/RegisterUI.ui
@@ -39,30 +39,6 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QCommandLinkButton" name="RestButton">
-   <property name="geometry">
-    <rect>
-     <x>360</x>
-     <y>465</y>
-     <width>111</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <family>Segoe UI</family>
-     <pointsize>13</pointsize>
-     <underline>true</underline>
-     <stylestrategy>PreferAntialias</stylestrategy>
-    </font>
-   </property>
-   <property name="text">
-    <string>重置信息</string>
-   </property>
-   <property name="autoRepeatInterval">
-    <number>97</number>
-   </property>
-  </widget>
   <widget class="QLabel" name="passwd2Msg">
    <property name="geometry">
     <rect>
@@ -204,7 +180,7 @@
      <property name="minimumSize">
       <size>
        <width>0</width>
-       <height>40</height>
+       <height>0</height>
       </size>
      </property>
      <property name="font">
@@ -270,7 +246,7 @@
     <widget class="QLabel" name="EmaiLlabel">
      <property name="geometry">
       <rect>
-       <x>-1</x>
+       <x>0</x>
        <y>55</y>
        <width>81</width>
        <height>40</height>
@@ -294,7 +270,7 @@
       <string>邮   箱：</string>
      </property>
      <property name="alignment">
-      <set>Qt::AlignCenter</set>
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
     </widget>
     <widget class="QLineEdit" name="EmailLineEdit">
@@ -403,6 +379,29 @@
      </property>
     </widget>
    </widget>
+  </widget>
+  <widget class="QPushButton" name="RestButton">
+   <property name="geometry">
+    <rect>
+     <x>360</x>
+     <y>470</y>
+     <width>101</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <weight>50</weight>
+     <bold>false</bold>
+     <underline>true</underline>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">border:None;</string>
+   </property>
+   <property name="text">
+    <string>重置信息</string>
+   </property>
   </widget>
  </widget>
  <resources/>
